Add BEStructureVoid and Chain

--- a/src/main/resources/assets/futureblock/lang/zh_cn.lang
+++ b/src/main/resources/assets/futureblock/lang/zh_cn.lang
@@ -2,3 +2,5 @@ tile.futureblock.block.small_amethyst_bud.name=小型紫晶芽
 tile.futureblock.block.medium_amethyst_bud.name=中型紫晶芽
 tile.futureblock.block.large_amethyst_bud.name=大型紫晶芽
 tile.futureblock.block.amethyst_cluster.name=紫水晶簇
+tile.futureblock.block.be_structure_void.name=结构空位（基岩版）
+tile.futureblock.block.chain.name=锁链
