--- a/src/main/resources/assets/futureblock/lang/en_us.lang
+++ b/src/main/resources/assets/futureblock/lang/en_us.lang
@@ -2,3 +2,5 @@ tile.futureblock.block.small_amethyst_bud.name=Small Amethyst Bud
 tile.futureblock.block.medium_amethyst_bud.name=Medium Amethyst Bud
 tile.futureblock.block.large_amethyst_bud.name=Large Amethyst Bud
 tile.futureblock.block.amethyst_cluster.name=Amethyst Cluster
+tile.futureblock.block.be_structure_void.name=Structure Void (BE)
+tile.futureblock.block.chain.name=Chain
