--- a/src/main/resources/assets/futureblock/lang/zh_cn.lang
+++ b/src/main/resources/assets/futureblock/lang/zh_cn.lang
@@ -5,7 +5,8 @@ tile.futureblock.block.amethyst_cluster.name=紫水晶簇
 tile.futureblock.block.be_structure_void.name=结构空位（基岩版）
 tile.futureblock.block.chain.name=锁链
 tile.futureblock.block.honey.name=蜂蜜块
-tile.futureblock.block.honey_netease.name=蜂蜜块（网易）
+tile.futureblock.block.honey_netease.name=蜂蜜块（网易版）
+tile.futureblock.block.honey_be.name=蜂蜜块（基岩版）
 
 itemGroup.futureblock.tab=Future Block
 
