--- a/src/main/resources/assets/futureblock/lang/en_us.lang
+++ b/src/main/resources/assets/futureblock/lang/en_us.lang
@@ -27,6 +27,23 @@ tile.futureblock.block.brown_candle.name=Brown Candle
 tile.futureblock.block.green_candle.name=Green Candle
 tile.futureblock.block.red_candle.name=Red Candle
 tile.futureblock.block.black_candle.name=Black Candle
+tile.futureblock.block.candle_cake.name=Candle Cake
+tile.futureblock.block.white_candle_cake.name=White Candle Cake
+tile.futureblock.block.orange_candle_cake.name=Orange Candle Cake
+tile.futureblock.block.magenta_candle_cake.name=Magenta Candle Cake
+tile.futureblock.block.light_blue_candle_cake.name=Light Blue Candle Cake
+tile.futureblock.block.yellow_candle_cake.name=Yellow Candle Cake
+tile.futureblock.block.lime_candle_cake.name=Lime Candle Cake
+tile.futureblock.block.pink_candle_cake.name=Pink Candle Cake
+tile.futureblock.block.gray_candle_cake.name=Gray Candle Cake
+tile.futureblock.block.light_gray_candle_cake.name=Light Gray Candle Cake
+tile.futureblock.block.cyan_candle_cake.name=Cyan Candle Cake
+tile.futureblock.block.purple_candle_cake.name=Purple Candle Cake
+tile.futureblock.block.blue_candle_cake.name=Blue Candle Cake
+tile.futureblock.block.brown_candle_cake.name=Brown Candle Cake
+tile.futureblock.block.green_candle_cake.name=Green Candle Cake
+tile.futureblock.block.red_candle_cake.name=Red Candle Cake
+tile.futureblock.block.black_candle_cake.name=Black Candle Cake
 
 subtitles.block.honey.slide=Sliding down a honey block
 subtitles.block.candle.crackle=Candle crackles
