--- a/src/main/resources/assets/futureblock/lang/zh_cn.lang
+++ b/src/main/resources/assets/futureblock/lang/zh_cn.lang
@@ -10,6 +10,7 @@ tile.futureblock.block.honey.name=蜂蜜块
 tile.futureblock.block.honey_netease.name=蜂蜜块（网易版）
 tile.futureblock.block.honey_be.name=蜂蜜块（基岩版）
 tile.futureblock.block.sniffer_egg.name=嗅探兽蛋
+tile.futureblock.block.soul_sand_new.name=灵魂沙（新版）
 tile.futureblock.block.candle.name=蜡烛
 tile.futureblock.block.white_candle.name=白色蜡烛
 tile.futureblock.block.orange_candle.name=橙色蜡烛
@@ -45,7 +46,9 @@ tile.futureblock.block.green_candle_cake.name=绿色蜡烛蛋糕
 tile.futureblock.block.red_candle_cake.name=红色蜡烛蛋糕
 tile.futureblock.block.black_candle_cake.name=黑色蜡烛蛋糕
 
+enchantment.soul_speed=灵魂疾行
 
 subtitles.block.honey.slide=从蜂蜜块滑下
 subtitles.block.candle.crackle=蜡烛：噼啪作响
 subtitles.block.candle.extinguish=蜡烛：熄灭
+subtitles.particle.soul_escape=灵魂：逸散
