add cake squishes sound

--- a/src/main/resources/assets/futureblock/lang/en_us.lang
+++ b/src/main/resources/assets/futureblock/lang/en_us.lang
@@ -51,4 +51,5 @@ enchantment.soul_speed=Soul Speed
 subtitles.block.honey.slide=Sliding down a honey block
 subtitles.block.candle.crackle=Candle crackles
 subtitles.block.candle.extinguish=Candle extinguishes
+subtitles.block.cake.add_candle=Cake squishes
 subtitles.particle.soul_escape=Soul escapes
