--- a/src/main/resources/assets/futureblock/lang/zh_cn.lang
+++ b/src/main/resources/assets/futureblock/lang/zh_cn.lang
@@ -51,4 +51,5 @@ enchantment.soul_speed=灵魂疾行
 subtitles.block.honey.slide=从蜂蜜块滑下
 subtitles.block.candle.crackle=蜡烛：噼啪作响
 subtitles.block.candle.extinguish=蜡烛：熄灭
+subtitles.block.cake.add_candle=蛋糕：吧唧
 subtitles.particle.soul_escape=灵魂：逸散
